# complex_rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/base/: algebraic.rs  common.rs  defaults.rs  mod.rs  polar.rs  types.rs
src/operations/: exponential.rs  mod.rs  trigonometry.rs
